# Stntuple

./: .gitignore  CMakeLists.txt  README.md  SConscript  build-linux-almalinux9-zen3-2d5rxpq
Stntuple/: base  geom  loop  print  stat  val
alg/: CMakeLists.txt  SConscript  TEmuLogLH.cc  TFeldmanCousins.cc  TStntuple.cc  TStntuple_Pbar_Striganov.cc  smooth.cc
alg/alg/: KrollWadaJosephInternalRadiativeCapture.hh  Linkdef.h  PlestidHillInternalRadiativeCapture.hh  smooth.hh
alg/alg/dict/: TFeldmanCousins_linkdef.h
ana/: CMakeLists.txt  InitVirtualDetectors.cc  TEventDisplayModule.cc  TGenAnaModule.cc  THelixAnaModule.cc  TSpmcAnaModule.cc  TTrackAnaModule.cc  TTriggerAnaModule.cc  TValidationModule.cc
ana/ana/: AnaDefs.hh  InitVirtualDetectors.hh  Linkdef.h  SimPar_t.hh  TClusterAnaModule.hh  TEventDisplayModule.hh  TGenAnaModule.hh  THelixAnaModule.hh  TSpmcAnaModule.hh  TTrackAnaModule.hh  TTriggerAnaModule.hh  TValidationModule.hh  VDetData_t.hh
ana/scripts/: helix.C  modules.hh  spmc.C  trk.C
base/: CMakeLists.txt  SConscript  TStnHexagon.cc  TStnShape.cc  TStnSquare.cc  TStnView.cc  TVisManager.cc  TVisNode.cc
base/base/: Linkdef.h  TStnView.hh  TVisManager.hh  TVisNode.hh
doc/: Stntuple.org  TSimpBlock.org  cataloging.org  (+14 more)
geom/: CMakeLists.txt  SConscript  TCrvNumerology.cc  TDiskCrystalMap.cc  TSsqCrystalMap.cc  TStnCrystal.cc  TStnTracker.cc  tracker_geom.txt
geom/data/: crv_counter_geom.txt  crv_sectors.txt
geom/geom/: Linkdef.h  TDiskIndex.hh  TStnTracker.hh  tracker_geom.hh
geom/geom/dict/: TStnTracker_linkdef.h
gui/: CMakeLists.txt  DisplayMu2eGeometry.cc  SConscript  TCalView.cc  TCalVisNode.cc  TComboHitVisNode.cc  TCrvView.cc  TCrvVisNode.cc  TEvdCalSection.cc  TEvdCluster.cc  TEvdComboHit.cc  TEvdCosmicTrack.cc  TEvdCrvBar.cc  TEvdCrvSection.cc  TEvdCrystal.cc  TEvdFrame.cc  TEvdHelixSeed.cc  TEvdHelixVisNode.cc  TEvdMainFrame.cc  TEvdPanel.cc  TEvdPanelVisNode.cc  TEvdPlane.cc  TEvdSimParticle.cc  TEvdStation.cc  TEvdStraw.cc  TEvdStrawHit.cc  TEvdStrawTracker.cc  TEvdTimeCluster.cc  TEvdTimeClusterVisNode.cc  TEvdTrack.cc  TEvdTracker.cc  TEvdTrkStrawHit.cc  THeaderVisNode.cc  TMcTruthVisNode.cc  TMu2eBField.cc  TStnFrame.cc  TStnGeoManager.cc  TStnVisManager.cc  TStnVisNode.cc  TTrkVisNode.cc
gui/gui/: DisplayMu2eGeometry.hh  Linkdef.h  TCalVisNode.hh  TComboHitVisNode.hh  TCrvVisNode.hh  TEvdCalSection.hh  TEvdCluster.hh  TEvdComboHit.hh  TEvdCosmicTrack.hh  TEvdCrvBar.hh  TEvdCrvSection.hh  TEvdCrystal.hh  TEvdFrame.hh  TEvdHelixSeed.hh  TEvdHelixVisNode.hh  TEvdPanel.hh  TEvdPanelVisNode.hh  TEvdPlane.hh  TEvdSimParticle.hh  TEvdStation.hh  TEvdStraw.hh  TEvdStrawHit.hh  TEvdStrawTracker.hh  TEvdTimeCluster.hh  TEvdTimeClusterVisNode.hh  TEvdTrack.hh  TEvdTracker.hh  TEvdTrkStrawHit.hh  THeaderVisNode.hh  TMcTruthVisNode.hh  TStnFrame.hh  TStnGeoManager.hh  TStnVisManager.hh  TStnVisNode.hh  TStnWidgetID.hh  TStrawHitVisNode.hh  TStrawTrackerVisNode.hh  TTrkVisNode.hh  TTrkVstView.hh  TVstView.hh  (+1 more)
gui/gui/dict/: DisplayMu2eGeometry_linkdef.h  TEvdCosmicTrack_linkdef.h  TEvdFrame_linkdef.h  TEvdHelixSeed_linkdef.h  TEvdHelixVisNode_linkdef.h  TEvdPanelVisNode_linkdef.h  TEvdSimParticle_linkdef.h  TEvdTimeClusterVisNode_linkdef.h  TEvdTimeCluster_linkdef.h  TEvdTracker_linkdef.h
loop/: CMakeLists.txt  TDFCModule.cc  THttpCatalogServer.cc  TSamCatalogServer.cc  TStnAna.cc  TStnCatalogServer.cc  TStnOutputModule.cc  TTxtCatalogServer.cc
loop/loop/: Linkdef.h  TStnAna.hh  TStnOutputModule.hh
print/: CMakeLists.txt  SConscript  TAnaDump.cc  TAnaDump_CosmicTrackSeed.cc  TAnaDump_SimParticle.cc  TAnaDump_comboHit.cc  TAnaDump_helixSeed.cc  TAnaDump_kalSeed.cc  TAnaDump_timeCluster.cc  print_calo_cluster_colls.cc  print_ch_colls.cc  print_combo_hit_coll.cc  print_cts_colls.cc  print_genp_colls.cc  print_helix_seed_colls.cc  print_kalrep_colls.cc  print_kalseed_colls.cc  print_sd_colls.cc  print_sdmc_colls.cc  print_sh_colls.cc  print_shf_colls.cc  print_simp_colls.cc  print_spmc_colls.cc  print_tc_colls.cc
print/print/: Linkdef.h  Stntuple_print_functions.hh  TAnaDump.hh
print/print/dict/: Stntuple_print_functions_linkdef.h
stat/: CMakeLists.txt  FCCalculator.cc  Functions.cc  Mu2e_model.cc  Poisson_t.cc  SConscript  TBelt.cc  TBeltLH.cc  TFeldmanCousins.cc  TFeldmanCousinsA.cc  TFeldmanCousinsB.C  TFeldmanCousinsB.cc  TKinLH.cc  channel_t.cc  cosm_channel_t.cc  crow_gardner.cc  dio_channel_t.cc  model_t.cc  mu2e_channel_t.cc  parameter_t.cc  pbar_channel_t.cc  pfixed_t.cc  pflat_t.cc  pgaus_t.cc  plogn_t.cc  ppoi_t.cc  rpci_channel_t.cc  rpco_channel_t.cc  upper_limit.cc  var_t.cc
stat/scripts/: build_model.C  mu2e_sensitivity.C  prob_vs_mu.C  su2020_default.C  test_TFeldmanCousins.C  test_TFeldmanCousinsB.C  test_crow_gardner.C  test_llh.C  test_model.C  test_tklh.C  test_upper_limit.C
stat/stat/: FCCalculator.hh  Functions.hh  Linkdef.h  Mu2e_model.hh  Poisson_t.hh  TBelt.hh  TBeltLH.hh  TFeldmanCousins.hh  TFeldmanCousinsB.hh  TKinLH.hh  TStatModel.hh  channel_t.hh  cosm_channel_t.hh  crow_gardner.hh  dio_channel_t.hh  model_t.hh  mu2e_channel_t.hh  parameter_t.hh  pbar_channel_t.hh  pfixed_t.hh  pflat_t.hh  pgaus_t.hh  plogn_t.hh  ppoi_t.hh  rpci_channel_t.hh  rpco_channel_t.hh  upper_limit.hh  var_t.hh
stat/stat/dict/: FCCalculator_linkdef.h  Mu2e_model_linkdef.h  TBeltLH_linkdef.h  TBelt_linkdef.h  TFeldmanCousinsB_linkdef.h  TFeldmanCousins_linkdef.h  TKinLH_linkdef.h  channel_t_linkdef.h  cosm_channel_t_linkdef.h  crow_gardner_linkdef.h  dio_channel_t_linkdef.h  model_t_linkdef.h  mu2e_channel_t_linkdef.h  parameter_t_linkdef.h  pbar_channel_t_linkdef.h  pfixed_t_linkdef.h  pflat_t_linkdef.h  pgaus_t_linkdef.h  plogn_t_linkdef.h  ppoi_t_linkdef.h  rpci_channel_t_linkdef.h  rpco_channel_t_linkdef.h  upper_limit_linkdef.h
val/: CMakeLists.txt  create_ntuple.cc  get_hist.cc  hist_data.cc  plot_data.cc  stn_book.cc  stn_catalog.cc  stn_dataset.cc
val/val/: Linkdef.h  hist_data.hh  plot_data.hh
val/val/dict/: hist_data_linkdef.h  hist_file_linkdef.h  stn_book_linkdef.h  stn_catalog_linkdef.h  stn_dataset_linkdef.h
(+138 files in other folders)
